<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Shoe detail"
            android:textSize="48sp" />

        <TextView
            style="@style/LabelDetailStyle"
            android:text="@string/shoe_name" />

        <EditText
            style="@style/InputDetailStyle"
            android:hint="What is your Shoe\'s name?" />

        <TextView
            style="@style/LabelDetailStyle"
            android:text="@string/company" />

        <EditText
            style="@style/InputDetailStyle"
            android:hint="@string/company_name" />

        <TextView
            style="@style/LabelDetailStyle"
            android:text="@string/shoe_size" />

        <EditText
            style="@style/InputDetailStyle"
            android:hint="@string/size_of_shoes" />

        <TextView
            style="@style/LabelDetailStyle"
            android:text="@string/description" />

        <EditText
            style="@style/InputDetailStyle"
            android:hint="Shoe\'s description" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/save_button_background"
            android:text="@string/save" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/cancel_button_background"
            android:text="Cancel" />
    </LinearLayout>
</layout>