<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    This layout contain TextViews, EditTexts and Buttons arrange vertically-->
    <!--    Use LinearLayout for simple implement-->
    <!--    Wrapped in a ScrollView to scrollable in landscape-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout style="@style/LayoutGroupStyle">

            <TextView
                android:id="@+id/label"
                style="@style/BigTextStyle"
                android:text="@string/shoe_store" />

            <TextView
                style="@style/LabelLoginStyle"
                android:layout_marginTop="32dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/usernameInputEditText"
                style="@style/LoginEditTextStyle"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/LabelLoginStyle"
                android:layout_marginTop="16dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordInputEditText"
                style="@style/LoginEditTextStyle"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonLogin"
                style="@style/LoginButtonStyle"
                android:background="@drawable/login_button_background"
                android:text="@string/login" />

            <Button
                android:id="@+id/buttonLoginWithExistingAccount"
                style="@style/LoginButtonStyle"
                android:background="@drawable/existing_login_button_background"
                android:text="@string/login_with_exiting_account" />
        </LinearLayout>
    </ScrollView>
</layout>