<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    This layout contain TextView, ImageView and Button arrange vertically-->
    <!--    Use LinearLayout for simple implement-->
    <!--    Wrapped in a ScrollView to scrollable in landscape-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout style="@style/LayoutGroupStyle">

            <TextView
                android:id="@+id/textWelcome"
                style="@style/BigTextStyle"
                android:text="@string/welcome" />

            <ImageView
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                app:srcCompat="@drawable/ic_welcome"
                app:tint="@color/greenLight" />

            <TextView
                android:id="@+id/textContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/welcome_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/click_to_instruction"
                android:textSize="16sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/nextButton"
                style="@style/NavigateButtonStyle"
                android:text="@string/next" />
        </LinearLayout>
    </ScrollView>

</layout>